syntax = "proto3";

package pocket;

option go_package = "github.com/pokt-network/pocket/shared/messaging";

message NodeStartedEvent {}

message BeforeHeightChangedEvent {
    uint64 current_height = 1;
}

message HeightChangedEvent {
    uint64 new_height = 1;
}
